# oryxis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/oryxis-app/: Cargo.toml
crates/oryxis-app/src/: ai.rs  app.rs  boot.rs  dispatch.rs  dispatch_keys.rs  dispatch_settings.rs  dispatch_ssh.rs  dispatch_tabs.rs  i18n.rs  main.rs  messages.rs  state.rs  theme.rs
crates/oryxis-app/src/dispatch_cloud/: mod.rs
crates/oryxis-app/src/views/: settings.rs  terminal.rs
crates/oryxis-cloud-aws/: Cargo.toml
crates/oryxis-core/: Cargo.toml
crates/oryxis-core/src/: error.rs  lib.rs  models.rs
crates/oryxis-core/src/models/: connection.rs  credential.rs  group.rs  key.rs  snippet.rs
crates/oryxis-ssh/: Cargo.toml
crates/oryxis-ssh/src/: engine.rs  lib.rs
crates/oryxis-sync/: Cargo.toml
crates/oryxis-sync/src/: engine.rs
crates/oryxis-terminal/: Cargo.toml
crates/oryxis-terminal/src/: backend.rs  colors.rs  lib.rs  pty.rs  widget.rs
crates/oryxis-vault/: Cargo.toml
crates/oryxis-vault/src/: keygen.rs  lib.rs  store.rs
crates/oryxis-vault/src/keygen/: mod.rs  pem.rs  ppk.rs
crates/oryxis-vault/tests/: ppk_real_fixtures.rs
crates/oryxis-vault/tests/fixtures/ppk/: README.md
resources/: oryxis.desktop
